# drone_swarm_simple_sim

./: .gitignore  CMakeLists.txt  README.md  parameters.md  wpcompare.cpp  wpcompare2.cpp  wpcompare3.cpp
app/: CMakeLists.txt  main.cpp
inc/: boid.h  camera_trackball.h  fence.h  messages.h  metrics.h  moving_object.h  obstacle.h  ref_axis.h  simulation_context.h  target.h  waypoints.h
python/: collision_penalty.py  sigmoid_helper.py
src/: CMakeLists.txt  boid.cpp  camera_trackball.cpp  fence.cpp  messages.cpp  metrics.cpp  moving_object.cpp  obstacle.cpp  ref_axis.cpp  simulation_context.cpp  target.cpp  waypoints.cpp
